--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,20 @@
     <artifactId>Number26-TransactionStore</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+<dependencies>
+
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>4.2.4.RELEASE</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <version>1.9.5</version>
+    </dependency>
+
+</dependencies>
+
 </project>
