--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
         <version>4.12</version>
     </dependency>
 
-</dependencies>
+    <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>19.0</version>
+    </dependency>
+
+
+    </dependencies>
 
 </project>
