--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,1 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<web-app>
+    <display-name>TransactionStore</display-name>
+    <servlet>
+        <filter>
+            <filter-name>transactionStoreGuiceFilter</filter-name>
+            <filter-class>com.google.inject.servlet.GuiceFilter
+            </filter-class>
+        </filter>
+        <filter-mapping>
+            <filter-name>transactionStoreGuiceFilter</filter-name>
+            <url-pattern>/*</url-pattern>
+        </filter-mapping>
+
+        <listener>
+            <listener-class>com.number26.ApplicationListener</listener-class>
+        </listener>
+
+    </servlet>
+
+</web-app>
