--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app>
-    <display-name>TransactionStore</display-name>
-    <servlet>
-        <filter>
-            <filter-name>transactionStoreGuiceFilter</filter-name>
-            <filter-class>com.google.inject.servlet.GuiceFilter
-            </filter-class>
-        </filter>
-        <filter-mapping>
-            <filter-name>transactionStoreGuiceFilter</filter-name>
-            <url-pattern>/*</url-pattern>
-        </filter-mapping>
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <filter>
+        <filter-name>transactionStoreGuiceFilter</filter-name>
+        <filter-class>com.google.inject.servlet.GuiceFilter
+        </filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>transactionStoreGuiceFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
-        <listener>
-            <listener-class>com.number26.ApplicationListener</listener-class>
-        </listener>
-
-    </servlet>
-
+    <listener>
+        <listener-class>com.number26.ApplicationListener</listener-class>
+    </listener>
 </web-app>
