--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,11 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <url>http://localhost:8083/</url>
+                    <url>http://localhost:8080/</url>
                     <server>tomcat7-local</server>
                     <path>/Number26</path>
-                    <username>admin</username>
-                    <password>admin</password>
+                    <username>tomcat</username>
+                    <password>comcat</password>
                 </configuration>
                 <executions>
                     <execution>
